# storm_grok

./: .gitignore  Cargo.toml  Makefile  README.md  sgrok.excalidraw  tailwind.config.js
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml
client/src/: client.rs  copy_writer.rs  dev_stuff.rs  eaves_proxy.rs  eaves_socket.rs  main.rs  sgclient.rs  ui.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
server/: Cargo.toml  README.md
server/config/: Default.toml  Dev.toml  Prod.toml
server/src/: copy_writer.rs  google_key_store.rs  jwt_key_store.rs  main.rs  server.rs  session.rs  settings.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs
src/: client.rs  dev_stuff.rs  main.rs
tests/: Cargo.toml  integration_test.rs
