[workspace]
members = ["server", "client", "frontend", "tests"]
resolver = "2"

# release profile tips from: https://github.com/johnthagen/min-sized-rust
# and: https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release-small]
inherits = "release"
strip = true
lto = true
panic = "abort"
opt-level = "s"

[build.target.wasm32-unknown-unknown]
rustflags = ["linker=clang-12","link-args=-fuse-ld=/home/rmstorm/.local/bin/mold"]
