[workspace]
members = ["server", "client", "frontend", "tests", "shared_types"]
resolver = "2"

# release profile tips from: https://github.com/johnthagen/min-sized-rust
# and: https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release-small]
inherits = "release"
strip = true
lto = true
panic = "abort"
opt-level = "s"
