[package]
name = "storm_grok"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
parking_lot = "0.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quinn = "0.9.3"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
futures = "0.3"
futures-util = "0.3.28"
color-eyre = "0.6"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
clap = { version = "4.2.1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7.7", features = ["io"] }
include_dir = { version = "0.7.3", features = ["glob"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
serde = { version = "1.0.159", features = ["derive"] }
webpki-roots = "0.23.0"
base64 = "0.21.0"
base64-serde = "0.7.0"
