[package]
name = "storm_grok"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
parking_lot = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
futures = "*"
futures-util = "*"
color-eyre = "*"
uuid = { version = "*", features = ["v4", "fast-rng"] }
clap = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
tokio-util = { version = "*", features = ["io"] }
include_dir = { version = "*", features = ["glob"] }
tower = "*"
tower-http = { version = "*", features = ["fs"] }
serde = { version = "*", features = ["derive"] }
webpki-roots = "*"
base64 = "*"
base64-serde = "*"
console-subscriber = "*"
