[package]
name = "sg_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy", rev = "e73a76600ce9e51e962de5266b03be596e6c1d50" }
axum = "*"
axum-server = { version = "*", features = ["tls-rustls"] }
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
tower = "*"
futures = "*"
hyper-rustls = "*"
parking_lot = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "*"
futures-util = "*"
anyhow = "*"
rcgen = "*"
uuid = { version = "*", features = ["v4", "fast-rng"] }
jsonwebtoken = "*"
serde = {version = "*", features = ["derive"] }
serde_json = "*"
config = "*"
regex = "*"
