[package]
name = "sg_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy", rev = "e73a76600ce9e51e962de5266b03be596e6c1d50" }
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tokio = { version = "*", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = "*"
futures = "*"
hyper-rustls = "0.24.1"
parking_lot = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
quinn = "0.10.2"
rustls = { version = "0.21.7", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "1.0.3"
futures-util = "*"
anyhow = "*"
rcgen = "0.11.2"
uuid = { version = "*", features = ["v4", "fast-rng"] }
jsonwebtoken = "*"
serde = {version = "*", features = ["derive"] }
serde_json = "*"
config = "*"
regex = "*"
