[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
regex = "*"
color-eyre = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
hyper-timeout = "*"

[[test]]
name = "test_transfer_site"
path = "integration_test.rs"
